--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/express": "^5.0.3",
+    "@types/uuid": "^10.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.1.13",
+    "uuid": "^11.1.0",
     "uuidv7": "1.0.2"
   },
   "devDependencies": {
